data/all_generated_tests/raw_wast_tests/br_UnreachableCodeExecution_333.wast
;; Design a nested loop construct where a `br` instruction attempts to jump out of its enclosing loop to an invalid block index, leading to `unreachable` if label lookup fails.

(assert_invalid
  (module
    (func
      (block
        (loop
          (br 2)
        )
      )
    )
  )
  "unknown label"
)